# push_swap

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  push_swap
checker_includes/: checker.h
checker_src/: free.c  init.c  main  main.c  moves_classification.c  moves_functions.c  read.c  stack.c  util.c
includes/: push_swap.h  stack.h
lib/: Makefile
lib/ft_printf/: Makefile  ft_printf.h  print_d.c  print_s.c  print_x.c  token.c  utils.c
lib/get_next_line/: Makefile  get_next_line.c  get_next_line_utils.c
lib/libft/: Makefile  ft_memcpy.c  libft.h
libft/: Makefile
libft/includes/: ft_printf.h  get_next_line.h  libft.h
libft/src/get_next_line_src/: get_next_line.c  get_next_line_utils.c
libft/src/libft_src/: ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  (+22 more)
libs/: Makefile
libs/ft_printf/: CMakeLists.txt  Makefile  cmake_install.cmake  ft_printf.c  print_c.c  print_p.c  print_percent.c  print_u.c
libs/get_next_line/: CMakeLists.txt  Makefile  cmake_install.cmake  get_next_line.c  get_next_line.h
libs/libft/: CMakeLists.txt  Makefile  cmake_install.cmake  ft_strlcpy.c
src/: debug  debug.c  free.c  ft_atoll.c  indexing.c  init.c  main.c  move_to_a.c  moves.c  moves_classification.c  moves_functions.c  moving_to_second_stack.c  read.c  sort.c  stack.c  stack_operations.c  tests.c  util.c
(+11 files in other folders)
